Fix bug that pushed review cards out on small screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -225,10 +225,6 @@ nav {
     background-color: rgba(255,255,255, 0);
 }
 
-.card-margin {
-    margin: 15px;
-}
-
 .review-sub {
     text-shadow: 2px 2px 5px rgb(31, 56, 198);
 }
